# doraemon-himitsu-dogu-search

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
data/: README.md
data/input/: ann_mapping.json  docs.json  hybridsearch_mapping.json
data/output/: himitsu_dogu_sentens_vector.npy
data/raw/: himitsu-dogu.txt
doraemon_himitsu_dogu_search/: app.py  data.py  indexer.py  preprocess.py  sentents_bert.py  sentents_bert_vectorizer.py
tests/: test_doraemon_himitsu_dogu_search.py
