[tool.poetry]
name = "doraemon-himitsu-dogu-search"
version = "0.1.0"
description = ""
authors = ["Shunya Ueta <hurutoriya@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
black = "^22.8.0"
isort = "^5.10.1"
flake8 = "^5.0.4"
flake8-docstrings = "^1.6.0"
mypy = "^0.971"
jupyter = "^1.0.0"
pandas = "^1.4.4"
torch = "^1.12.1"
fugashi = {extras = ["unidic-lite"], version = "^1.2.0"}
ipadic = "^1.0.0"
flake8-black = "^0.3.3"
numpy = "^1.23.4"
transformers = "^4.23.1"
tqdm = "^4.64.1"
elasticsearch = "^8.4.3"
streamlit = "^1.13.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
